# RoRD-Layout-Recognation

./: .gitignore  LICENSE  README.md  TRAINING_STRATEGY_ANALYSIS.md  benchmark_grid.json  config.py  evaluate.py  losses.py  main.py  match.py  pyproject.toml  pytest.ini  train.py
configs/: base_config.yaml
data/: __init__.py  ic_dataset.py
docs/: NextStep.md  data_description.md  diffusion_training.md  feature_work.md  layout_matching_guide.md  loss_function.md
docs/codereview/: 2026-03-17_code_review_report.md  2026-03-17_fix_log.md  2026-03-17_weekly_report.md  README.md
docs/description/: Backbone_FPN_Test_Change_Notes.md  COMPLETION_SUMMARY.md  Completed_Features.md  Documentation_Reorganization_Summary.md  NEXTSTEP_COMPLETION_SUMMARY.md  NextStep_Checklist.md  Performance_Benchmark.md
docs/reports/: Increment_Report_2025-10-20.md  README.md  academic_midterm_report.md  data_analysis.py  midterm_report.md  performance_analysis.py  performance_data.md  simple_analysis.py
docs/todos/: README.md  (+2 more)
examples/: layout_matching_example.py
models/: rord.py
tests/: __init__.py  benchmark_attention.py  benchmark_backbones.py  benchmark_fpn.py  benchmark_grid.py  test_dataset.py  test_losses.py  test_match.py  test_model.py
tools/: __init__.py  batch_rasterize_10_0.py  export_tb_summary.py  generate_synthetic_layouts.py  klayoutconvertor.py  layout2png.py  preview_dataset.py  rasterize.py  setup_diffusion_training.py  smoke_test.py  synth_pipeline.py  validate_h_consistency.py
utils/: config.py  config_loader.py  data_utils.py  transforms.py
(+18 files in other folders)
