[project]
name = "rord-layout-recognation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "gdspy>=1.6.13",
    "gdstk>=0.9.60",
    "klayout>=0.30.2",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "omegaconf>=2.3.0",
    "tensorboard>=2.16.2",
    "tensorboardx>=2.6.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
